--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .container {
+      @apply max-w-screen-lg mx-auto px-10 md:px-0
+    }
+}
+
+@layer utilities{
+    a {
+        @apply hover:underline
+    }
+}
