--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@
     .container {
       @apply max-w-screen-lg mx-auto px-10 md:px-0
     }
+    .spotify-btn {
+        @apply text-center max-w-max bg-green-400 p-4 uppercase 
+        rounded-full font-semibold tracking-wider transition-colors 
+        duration-200 ease-in-out hover:bg-green-500 
+    }
 }
 
 @layer utilities{
